--- a/BetterControlPanel/index.html
+++ b/BetterControlPanel/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>理综迷城</title>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+          tex2jax: {
+            inlineMath: [ ['$','$'], ['\\(','\\)'] ],
+            displayMath: [ ['$$','$$'], ['\$$','\$$'] ],
+            processEscapes: true,
+          },
+          options: {
+                menuOptions: {
+                    settings: {
+                        zoom: 'Click',      // 禁用缩放菜单
+                        context: 'Browser'   // 限制右键内容
+                    }
+                }
+            },
+        });
+    </script>
+
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
 </head>
 
 <body>
